--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.1.0
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   firebase_analytics: ^10.8.0
+  fluttertoast: ^8.2.4
+  geolocator: ^10.1.0
+  curved_navigation_bar: ^1.0.3
+  geocoding: ^2.1.1
+  firebase_database: ^10.4.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +71,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/kbs_motohub_logo.png
+    - assets/kbs_motohub_red.png
+    - assets/service_cover.png
+    - assets/Ellipse_blue.png
+    - assets/car_service.png
+    - assets/car_service_noBg.png
+    - assets/car_service_ellipse.png
+    - assets/car_cover.png
+    - assets/button_images/cleaning.png
+    - assets/button_images/inspection.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
