--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_database: ^10.4.0
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +84,10 @@ flutter:
     - assets/car_cover.png
     - assets/button_images/cleaning.png
     - assets/button_images/inspection.png
-
+    - assets/appointment.png
+    - assets/motorcycle.png
+    - assets/garage.png
+    - assets/file.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
