--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
   flutter_datetime_picker: ^1.5.1
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +89,10 @@ flutter:
     - assets/motorcycle.png
     - assets/garage.png
     - assets/file.png
+    - assets/service.jpg
+    - assets/Delhi.png
+    - assets/Kbs.png
+    - assets/Chandigarh.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
