--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
+  google_fonts: ^6.1.0
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
@@ -50,6 +50,10 @@ dependencies:
   url_launcher: ^6.1.11
   flutter_datetime_picker: ^1.5.1
   email_validator: ^2.1.17
+  material_design_icons_flutter: ^7.0.7296
+  intl: ^0.19.0
+  get: ^4.6.6
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +97,9 @@ flutter:
     - assets/Delhi.png
     - assets/Kbs.png
     - assets/Chandigarh.png
+    - assets/logo/kbs_motohub_red.png
+    - assets/images/splash_bg_demo.jpg
+    - assets/images/onboard_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
